# PyMath.ReechebleMachineLearningEngineerTest.WebAPI

./: .gitignore  .pre-commit-config.yaml  Dockerfile-Reecheble-Finance-Base  Dockerfile-Reecheble-Finance-Local  LICENSE  README.md  main.py  pyproject.toml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  installation.rst  overview.rst  reference.rst
docs/source/_static/: custom.css
docs/source/installation/: development.rst  production.rst
docs/source/reference_index/: application.rst  domain.rst  infrastructure.rst  shared.rst
reecheble_finance/: __init__.py  app_definitions.py
reecheble_finance/application/: __init__.py
reecheble_finance/application/sdk/: __init__.py
reecheble_finance/application/services/: __init__.py  abstract_command.py  abstract_query.py  abstract_service.py
reecheble_finance/distribution/api/: __init__.py  api_manager.py  dependencies.py  schemas.py
reecheble_finance/distribution/client_app/: angular.json
reecheble_finance/domain/: __init__.py
reecheble_finance/domain/abstract_domain/: __init__.py  abstract_domain_parser_mixin.py
reecheble_finance/domain/abstract_repository/: __init__.py  abstract_repository.py
reecheble_finance/domain/data_models/: __init__.py
reecheble_finance/domain/enums/: __init__.py  enumeration_types.py  multi_attribute_value_enumeration.py
reecheble_finance/domain/exceptions/: __init__.py  domain_exceptions.py
reecheble_finance/domain/load_request/: __init__.py  loan_request.py
reecheble_finance/domain/models/: __init__.py  account.py  loan_account.py  loan_request.py  repayment_history.py  user.py
reecheble_finance/infrastructure/: __init__.py
tests/test_common_enums/: test_enums.py
(+170 files in other folders)
