[tool.poetry]
name = "PyMath.ReechebleMachineLearningTest.WebAPI"
version = "0.0.1"
description = """A Python web API for a Reecheble coding challenge for a machine learning engineer role."""
license = "EULA"
authors = ["SeaOater <sea.oater@pymath.com>"]
maintainers = ["SeaOater <sea.oater@pymath.com>"]
readme = ["./README.md", "./LICENSE"]
keywords = ["Reecheble Reducing Balance Method", "Reecheble Machine Learning Engineer"]
homepage = "https://github.com/PyMath-Projects/PyMath.ReechebleMachineLearningEngineerTest.WebAPI.git"
repository = "https://github.com/PyMath-Projects/PyMath.ReechebleMachineLearningEngineerTest.WebAPI.git"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8||^3.9||^3.10||^3.11"
uvicorn = "^0.19.0"
pydantic = "^1.10.2"
fastapi = "0.95.2"
fastapi-versioning = "^0.10.0"
pymongo = "^4.6.2"
httpx = "^0.23.1"
python-multipart = "^0.0.5"
pytz = "^2022.7.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^2.37.0"
pre-commit = "^2.20.0"
toml = "^0.10.2"
sphinx-rtd-theme = "^1.1.1"
sphinxcontrib-napoleon = "^0.7"
recommonmark = "^0.7.1"
sphinx-copybutton = "^0.5.1"
furo = "^2022.9.29"
sphinxext-opengraph = "^0.7.3"
sphinxcontrib-programoutput = "^0.17"
myst-parser = "^1.0.0"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.61.0"
sphinx = "^6.1.3"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
